LOGIN/MERGE: First implementation: Files already in the project adapted to use the new system.
Former-commit-id: 79ccf46e00c0c966bf5918709754330e7d9897f7

--- a/Assets/Resources/Localization/spanish.txt
+++ b/Assets/Resources/Localization/spanish.txt
@@ -20,7 +20,7 @@ TID_DRAGON_CLASSIC_DESC=
 TID_DRAGON_DEVIL_NAME=
 TID_DRAGON_DEVIL_DESC=
 TID_DRAGON_BALROG_NAME=
-TID_DRAGON_BALROG_DESC=
+TID_DRAGON_BALROG_DESC=Test %U0 sigue %U1 test
 TID_DRAGON_TITAN_NAME=
 TID_DRAGON_TITAN_DESC=
 TID_FIRE_DESC=
@@ -304,3 +304,87 @@ TID_GEN_FREE=
 TID_GEN_EXCLAMATION_EXPRESSION=
 TID_RESULTS_TO_UNLOCK_NEXT_DRAGON=
 TID_RESULTS_DRAGON_UNLOCKED=
+STRING_SPINNER_LOADING=Loading
+STRING_CLOUD_LOADING_TITLE=REQUEST IN PROGRESS...
+STRING_CLOUD_LOADING_WAIT=Loading, Please Wait..."
+STRING_CLOUD_SN=Compete with your %U0 friends
+STRING_OPTIONS_USERPROFILE_LOG_RECEIVE_SN=Log into %U0 and receive
+STRING_OPTIONS_USERPROFILE_LOG_NETWORK=Log into %U0
+STRING_SOCIAL_FB_LOGIN_MAINMENU_INCENTIVIZED=%U0 [GEMS]
+STRING_SOCIAL_FB_PERM_MAINMENU=[ffe400]Add Friends[-]
+STRING_SOCIAL_FB_PERM_MAINMENU_INCENTIVIZED=[ffe400]Add Friends[-]\n%U0 [GEMS]
+STRING_CLOUD_SN_LOGGED=Disabling %U0 will also turn off Cloud Saving
+STRING_SAVE_POPUP_WARN_CLOUD_SWITCH_NETWORK_TEXT=You are trying to login using a different account type. This will load the Cloud Save data for the new account or, if no Cloud Save exists, start a new game.\n\nYou can return to your current game later by logging into %U0 from the Options Menu.\n\n Are you sure you want to login using %U1?
+STRING_SAVE_POPUP_WARN_CLOUD_LOGOUT_TITLE=Cloud Save Logout
+STRING_SOCIAL_WARNING_LOGOUT=Logout
+STRING_SAVE_POPUP_WARN_CLOUD_LOGOUT_TEXT_SN=Logging out of %U0 will diable Cloud Saving.\n\nYou can continue playing on this device, but your progress will no longer be Cloud Saved. You can re-enable Cloud Save by logging back into your %U0 account from the Optiions menu.\n\nAre you sure you want to disable Cloud Saving?
+STRING_SOCIAL_WARNING_LOGOUT_FB_SN=If you logout of %U0 you won't be able to compete with your Friends on the Leaderboards. Are you sure you want to do this?
+STRING_SAVE_POPUP_WARN_CLOUD_SWITCH_TITLE=Cloud Save Switch
+STRING_SAVE_POPUP_WARN_CLOUD_SWITCH_TEXT_SN=You are trying to login using a different %U0 account. This will load the Cloud Save data for the new account or, if no Cloud Save exists, start a new game.\n\nIf you have been using Cloud Save you may be able to return to your current game later by logging back into the previous %U0 account, but otherwise your current progress will be lost.\n\nAre you sure you want to login to the new account?
+STRING_SAVE_POPUP_ERROR_CLOUD_SAVE_DISABLED_TITLE=Cloud Save Disabled
+STRING_SAVE_POPUP_ERROR_CLOUD_SAVE_DISABLED_TEXT_SN=You can continue playing on this device, but your progress will no longer be Cloud Save.\n\nTo re-enable Cloud Save make sure you're logged into the correct account, and then re-enable %U0 from the Options menu.
+STRING_SAVE_POPUP_ERROR_LOAD_FAILED_TEXT=There was an error loading your Local Save data.\n\nPlease make sure that your SD Card / internal storage is accessible. If your device is connected to a computer, please unplug it and try again.\n\nThe game cannot continue until this issue is fixed.\n\n(%U0).
+STRING_SAVE_POPUP_ERROR_LOCAL_SAVE_CORRUPTED_TITLE=Local Save Corrupted
+STRING_SAVE_POPUP_ERROR_LOCAL_SAVE_CORRUPTED_TEXT_OFFLINE=We were unable to connect to the Cloud Save server, and your Local Save is corrupted.\n\nIf you continue, a new Local Save will be created, which will start a new game.\n\nTo recover your Cloud Save, please check your network connection or try again later.
+STRING_SAVE_POPUP_ERROR_LOCAL_SAVE_CORRUPTED_TEXT=Sorry, but we were unable to load your save data.\n\nA new Local Save will now be created, which will start a new game. We're sorry for any inconvenience.
+STRING_SAVE_POPUP_ERROR_LOCAL_SAVE_CORRUPTED_TEXT_UPDATE1=Your Local Save is corrupted, and your Cloud Save is from a more recent version of the game and cannot be loaded.\n\nYou need to update the app and load your Cloud Save to continue playing on this device.\n\n(%U0).
+STRING_SAVE_POPUP_ERROR_LOCAL_SAVE_CORRUPTED_TEXT_UPDATE2=Your Local Save is corrupted, and your Cloud Save is from a more recent version of the game and cannot be loaded.\n\nThe update should be available on this device soon. Once you have updated, you can continue playing with your Cloud Save.\n\nIf you continue now a new Local Save will be created, which will start a new game on this device.\n\n(%U0).
+STRING_SAVE_POPUP_PROMPT_CLOUD_ENABLE_TITLE=Enable Cloud Save
+STRING_SAVE_POPUP_PROMPT_CLOUD_ENABLE_TEXT_SOCIAL_SN=Do you want to enable Cloud Save? This will backup your save data online and allow you to sync progress between multiple devices by logging into %U0.
+STRING_SAVE_POPUP_CLOUD_ENABLED_TITLE=Cloud Save Enabled
+STRING_SAVE_POPUP_CLOUD_ENABLED_TEXT_IOS=Cloud Save is now enabled. You can load your Cloud Save on any iOS device by logging into your %U0 account.
+STRING_SAVE_POPUP_CLOUD_ENABLED_TEXT_ANDROID=Cloud Save is now enabled. You can load your Cloud Save on any Android device by logging into your %U0 account.
+STRING_SAVE_POPUP_ERROR_LOAD_FAILED_TITLE=Unable to Access Save Data
+STRING_SOCIAL_ERROR_WRONG_ACCOUNT=Wrong Account
+STRING_SOCIAL_ERROR_WRONG_ACCOUNT_FB_SN=The game's online features have been disabled because you're trying to login using a different %U0 account.\n\nPlease go to the %U0 app and/or your default browser and login with the correct account again to continue competing with friends on the Leaderboards.
+STRING_SOCIAL_LOGIN_INCOMPLETE_TITLE=Login Incomplete
+STRING_SOCIAL_LOGIN_INCOMPLETE_FB2=Hungry Dragon needs to be able to view your [08FF00FF]Friends list[-] to let you see your friend's dragons and compete with them on the Leaderboard.\n\nDo you want to do this now?
+STRING_SOCIAL_LOGIN_INCOMPLETE_FB_SN=To get the %U1 [GEM] %U0 login reward you need to let Hungry Dragon view your [08FF00FF]Friends list[-].\n\nDoing this will let you see your friend's dragons and compete with them on the Leaderboard.\n\nDo you want to do this now?
+STRING_SOCIAL_NETWORK_FACEBOOK=Facebook
+STRING_SOCIAL_LOGIN_FAILED=Login Failed
+STRING_SOCIAL_LOGIN_FAILED_FB_SN=If you want to try again later, just tap the %U0 button again.
+STRING_SOCIAL_LOGIN_COMPLETE_TITLE=Login Complete
+STRING_SOCIAL_LOGIN_COMPLETE_FB=You can now find Friends who are playing Hungry Dragon, see their dragons and high scores, and keep up to date with what they're doing in the game.\n\nAs a thank you, we've awarded you %U0 [GEM]!
+STRING_FACEBOOKPOST_ERROR_SHAREPERMISSION_TITLE=Share Failed
+STRING_FACEBOOKPOST_ERROR_SHAREPERMISSION=Hungry Dragon was not given permission to publish to your Facebook wall. To post to Facebook this permission will need to be granted.
+STRING_SAVE_POPUP_WARN_CLOUD_DISABLE_TITLE=DisableCloud Save
+STRING_SAVE_POPUP_WARN_CLOUD_DISABLE_TEXT=If you disableCloud Save you can continue playing on this device, but your progress will no longer be Cloud Saved. You can re-enable Cloud Save from the Options menu.\n\nAre you sure you want to disable Cloud Saving?
+STRING_CLOUD_SYNCSAVE=Syncing Save Data will ensure your progres is the same across all your devices
+STRING_CLOUD_CLOUDSAVE=CLOUD SAVE Backs up your progress online
+STRING_CLOUD_BUTT_SYNCSAVE=SYNC SAVE DATA
+STRING_SAVE_POPUP_ERROR_CLOUD_OFFLINE_TITLE=WARNING:No Cloud Connection
+STRING_SAVE_POPUP_ERROR_CLOUD_OFFLINE_TEXT=Unable to connect to the Cloud Save server. Please check your internet connection or try again later.\n\nThe game will continue saving locally as normal, and will sync your progress to the Cloud as soon as it's able to reach our server.\n\n(%U0).
+STRING_SAVE_POPUP_ERROR_CLOUD_LOGIN_FAILED_TITLE=ERROR: Login Failed
+STRING_SAVE_POPUP_ERROR_CLOUD_LOGIN_FAILED_TEXT_SN=We were unable to login to the Cloud Save server.\n\nPlease try logging into %U1 again to re-enable Cloud Save, or your progress will only be saved locally on this device.\n\n(%U0).
+STRING_SAVE_POPUP_ERROR_CLOUD_LOGIN_FAILED_TEXT=We were unable to login to the Cloud Save server.\n\nPlease try logging into %U1 again to re-enable Cloud Save, or your progress will only be saved locally on this device.\n\n(%U0).
+STRING_SAVE_POPUP_ERROR_BOTH_SAVE_CORRUPTED_TITLE=ERROR:Save Corrupted
+STRING_SAVE_POPUP_ERROR_BOTH_SAVE_CORRUPTED_TEXT=Sorry, but we were unable to load your Cloud Save or your Local Save.\n\nA new Local Save will now be created, which will start a new game. We're sorryfor any inconvenience.\n\nIf you have recently played the game on another device you may be able to recover some of your progress by playing on that device instead.
+STRING_SAVE_POPUP_ERROR_CLOUD_INACCESSIBLE_TITLE=Cloud Save Inaccessible
+STRING_SAVE_POPUP_ERROR_CLOUD_INACCESSIBLE_TEXT=There was an error attempting to download your cloud save. You can attempt to resolve this by trying to sync again, uploading your local save to the cloud or playing offline with your local save.
+STRING_SAVE_POPUP_WARN_CLOUD_WRONG_CHOICE_TITLE=Warning!
+STRING_SAVE_POPUP_WARN_CLOUD_WRONG_CHOICE_TEXT=The save file you chose has less game progress. Are you sure you want to use it?
+STRING_SAVE_POPUP_ERROR_CLOUD_SAVE_CORRUPTED_TITLE=WARNING:Cloud Save Corrupted
+STRING_SAVE_POPUP_ERROR_CLOUD_SAVE_CORRUPTED_TEXT=Your Cloud Save was corrupted, but your Local Save has been successfully loaded.\n\nIf you have more recent save data on another device you may be able to recover any lost progress by playing on that device.
+STRING_SAVE_POPUP_ERROR_LOCAL_SAVE_CORRUPTED_TEXT_CLOUD=Your Local Save was corrupted, but your Cloud Save has been successfully loaded.\n\nIf this problem persists, please contact customer support.
+STRING_SAVE_POPUP_ERROR_SAVE_DISABLED_TITLE=EROR: Save Disabled
+STRING_SAVE_POPUP_ERROR_SAVE_DISABLED_TEXT_SPACE=Your device does not have enough free storage space to save your progress.\n\nPlease make more space, as you will not be able to continue the game until it is able to save.
+STRING_SAVE_POPUP_ERROR_SAVE_DISABLED_TEXT_ACCESS=The game can't access your device's local storage and is unable to save your progress.\n\nPlease make sure that your SD Card / internal storage is accessible. If your device is connected to a computer, please aunplug it and try again.
+STRING_SAVE_POPUP_ERROR_CLOUD_WRONG_USER_TITLE=Cloud Save Error
+STRING_SAVE_POPUP_ERROR_CLOUD_WRONG_USER_TEXT=Cloud Save has been disabled because you were logged into the wrong Facebook account. If you've logged back into the correct account, you can try reconnecting to your Cloud Save now.\n\n(%U0).
+STRING_SAVE_POPUP_ERROR_SAVE_FAILED_TITLE=ERROR:Save Failed
+STRING_SAVE_POPUP_ERROR_SAVE_FAILED_TEXT_ANDROID=There was an error saving your game. Please check that you have free storage space available on your device, and if it's connected to a computer via USB, please unplug it.\n\nYour progress will not be saved until this issue is fixed.\n\n(%U0).
+STRING_SAVE_POPUP_ERROR_SAVE_FAILED_TEXT_IOS=There was an error saving your game. Please check that you have free storage space available on your device.\n\nYour progress will not be saved until this issue is fixed.\n\n(%U0).
+STRING_SAVE_POPUP_ERROR_UPDATE_TITLE=Update Not Available
+STRING_SAVE_POPUP_ERROR_UPDATE_TEXT1=Your Cloud Save is from a more recent version of the game and cannot be loaded. You should update the app on this device before continuing.\n\nYou can play offline with your Local Save, but progress will be lost when you update the app and sync with your Cloud Save.\n\n(%U0).
+STRING_SAVE_POPUP_ERROR_UPDATE_TEXT2=Your Cloud Save is from a more recent version of the game and cannot be loaded. The new version of the app should be available on this device soon.\n\nUntil then you can play offline with your Local Save, but progress will be lost when you update the app and sync with your Cloud Save.\n\n(%U0).
+STRING_SAVE_POPUP_ERROR_SYNC_FAILED_TITLE=Cloud Sync Failed
+STRING_SAVE_POPUP_ERROR_SYNC_FAILED_TEXT=There was an error syncing with your Cloud Save. Please contact customer support if this problem persists.\n\n(%U0).
+STRING_SOCIAL_ERROR_CONNECTION_TITLE=Connection Lost
+STRING_SOCIAL_ERROR_CONNECTION_INFO_SN=Hungry Shark World cannot connect to %U0.\n\nPlease check your internet connection and try again.
+STRING_SAVE_POPUP_CLOUD_SAVE_ACTIVE_TITLE=
+STRING_SAVE_POPUP_CLOUD_SAVE_ACTIVE_TEXT=Cloud Save is currently active.
+STRING_SAVE_POPUP_CLOUD_SAVE_ACTIVE_TEXT2=Cloud Save is currently active.
+STRING_BUTTON_CONTINUE=CONTINUE=Cloud Save Active
+STRING_SAVE_POPUP_CLOUD_SAVE_SYNC_NOW=SYNC NOW
+STRING_BUTTON_RETRY=RETRY
+STRING_BUTTON_UPLOAD=Upload
