--- a/Assets/Resources/Localization/spanish.txt
+++ b/Assets/Resources/Localization/spanish.txt
@@ -381,10 +381,10 @@ STRING_SAVE_POPUP_ERROR_SYNC_FAILED_TITLE=Cloud Sync Failed
 STRING_SAVE_POPUP_ERROR_SYNC_FAILED_TEXT=There was an error syncing with your Cloud Save. Please contact customer support if this problem persists.\n\n(%U0).
 STRING_SOCIAL_ERROR_CONNECTION_TITLE=Connection Lost
 STRING_SOCIAL_ERROR_CONNECTION_INFO_SN=Hungry Shark World cannot connect to %U0.\n\nPlease check your internet connection and try again.
-STRING_SAVE_POPUP_CLOUD_SAVE_ACTIVE_TITLE=
-STRING_SAVE_POPUP_CLOUD_SAVE_ACTIVE_TEXT=Cloud Save is currently active.
+STRING_SAVE_POPUP_CLOUD_SAVE_ACTIVE_TITLE=Cloud Save Active
+STRING_SAVE_POPUP_CLOUD_SAVE_ACTIVE_TEXT=Cloud Save is currently active. Your progress was last backed up at %U0.
 STRING_SAVE_POPUP_CLOUD_SAVE_ACTIVE_TEXT2=Cloud Save is currently active.
-STRING_BUTTON_CONTINUE=CONTINUE=Cloud Save Active
+STRING_BUTTON_CONTINUE=CONTINUE
 STRING_SAVE_POPUP_CLOUD_SAVE_SYNC_NOW=SYNC NOW
 STRING_BUTTON_RETRY=RETRY
 STRING_BUTTON_UPLOAD=Upload
