UPDATE VERSION: Ported FGOL message popups to Dragon system.
Former-commit-id: 190ea3f55b125f6545bbee45bfc80eed9f63cf36

--- a/Assets/Resources/Localization/english.txt
+++ b/Assets/Resources/Localization/english.txt
@@ -374,9 +374,12 @@ STRING_SAVE_POPUP_ERROR_CLOUD_WRONG_USER_TEXT=Cloud Save has been disabled becau
 STRING_SAVE_POPUP_ERROR_SAVE_FAILED_TITLE=ERROR:Save Failed
 STRING_SAVE_POPUP_ERROR_SAVE_FAILED_TEXT_ANDROID=There was an error saving your game. Please check that you have free storage space available on your device, and if it's connected to a computer via USB, please unplug it.\n\nYour progress will not be saved until this issue is fixed.\n\n(%U0).
 STRING_SAVE_POPUP_ERROR_SAVE_FAILED_TEXT_IOS=There was an error saving your game. Please check that you have free storage space available on your device.\n\nYour progress will not be saved until this issue is fixed.\n\n(%U0).
-STRING_SAVE_POPUP_ERROR_UPDATE_TITLE=Update Not Available
+STRING_SAVE_POPUP_ERROR_UPDATE_TITLE=Update Required
 STRING_SAVE_POPUP_ERROR_UPDATE_TEXT1=Your Cloud Save is from a more recent version of the game and cannot be loaded. You should update the app on this device before continuing.\n\nYou can play offline with your Local Save, but progress will be lost when you update the app and sync with your Cloud Save.\n\n(%U0).
 STRING_SAVE_POPUP_ERROR_UPDATE_TEXT2=Your Cloud Save is from a more recent version of the game and cannot be loaded. The new version of the app should be available on this device soon.\n\nUntil then you can play offline with your Local Save, but progress will be lost when you update the app and sync with your Cloud Save.\n\n(%U0).
+STRING_SAVE_POPUP_PROMPT_UPDATE_TITLE=Update Available
+STRING_SAVE_POPUP_PROMPT_UPDATE_TEXT_IOS=Hungry Dragon has been updated! To take advantage of Cloud Saves, Daily Contests and sales please download the latest version now from the App Store.
+STRING_SAVE_POPUP_PROMPT_UPDATE_TEXT_ANDROID=Hungry Dragon has been updated! To take advantage of Cloud Saves, Daily Contests and sales please download the latest version now from the Google Play store
 STRING_SAVE_POPUP_ERROR_SYNC_FAILED_TITLE=Cloud Sync Failed
 STRING_SAVE_POPUP_ERROR_SYNC_FAILED_TEXT=There was an error syncing with your Cloud Save. Please contact customer support if this problem persists.\n\n(%U0).
 STRING_SOCIAL_ERROR_CONNECTION_TITLE=Connection Lost
