Summary Screen: Development - Fixed dragon progression carousel pill. Tested all possible cases. Localization: Content - Texts export. Added new texts for the summary screen and for the pause popup.
Former-commit-id: 4052bc39842d163e5f55f6a8335c53d536081a5e

--- a/Assets/Resources/Localization/brazilian.txt
+++ b/Assets/Resources/Localization/brazilian.txt
@@ -304,3 +304,10 @@ TID_GEN_FREE=
 TID_GEN_EXCLAMATION_EXPRESSION=
 TID_RESULTS_TO_UNLOCK_NEXT_DRAGON=
 TID_RESULTS_DRAGON_UNLOCKED=
+TID_RESULTS_DRAGON_REQUIRED=
+TID_RESULTS_DRAGON_ALREADY_UNLOCKED=
+TID_PAUSE_TAB_MISSIONS_TITLE=
+TID_PAUSE_TAB_MAP_TITLE=
+TID_PAUSE_TAB_OPTIONS_TITLE=
+TID_PAUSE_TAB_OPTIONS_END_GAME=
+TID_DRAGON_GET_NOW=
