--- a/Assets/Resources/Localization/german.txt
+++ b/Assets/Resources/Localization/german.txt
@@ -304,3 +304,10 @@ TID_GEN_FREE=
 TID_GEN_EXCLAMATION_EXPRESSION=
 TID_RESULTS_TO_UNLOCK_NEXT_DRAGON=
 TID_RESULTS_DRAGON_UNLOCKED=
+TID_RESULTS_DRAGON_REQUIRED=
+TID_RESULTS_DRAGON_ALREADY_UNLOCKED=
+TID_PAUSE_TAB_MISSIONS_TITLE=
+TID_PAUSE_TAB_MAP_TITLE=
+TID_PAUSE_TAB_OPTIONS_TITLE=
+TID_PAUSE_TAB_OPTIONS_END_GAME=
+TID_DRAGON_GET_NOW=
