--- a/Assets/Resources/Localization/english.txt
+++ b/Assets/Resources/Localization/english.txt
@@ -82,9 +82,9 @@ TID_INCUBATOR_FULL_NEST_MESSAGE=All yout nests are full!\nWait for the eggs to f
 TID_INCUBATOR_EMPTY_NEST_MESSAGE=Your nest is empty!\nDrag and drop an egg from the inventory at the right side of the screen!
 TID_EGG_INSTANT_OPEN=Instant Open
 TID_EGG_BUY_MORE=Buy Again
-TID_EGG_CALL_TO_ACTION=Equip It!
+TID_EGG_EQUIP_REWARD=Equip It!
 TID_EGG_TAP_TO_OPEN=Tap on the egg to open it!
-TID_EGG_REWARD_DISGUISE_MAXED=%U0 disguise already maxed!\nYou get %U1 <TID_SC_NAME_PLURAL> instead!
+TID_EGG_REWARD_DISGUISE_MAXED=%U0 skin for %U1 already maxed!\nYou get %U2 <TID_SC_NAME_PLURAL> instead!
 TID_SC_NAME=coin
 TID_PC_NAME=gem
 TID_SC_NAME_PLURAL=coins
@@ -183,8 +183,8 @@ TID_EGG_REWARD_DRAGON_SPECIAL_NAME=Special Dragon
 TID_DISGUISE_RARITY_COMMON_NAME=Common
 TID_DISGUISE_RARITY_RARE_NAME=Rare
 TID_DISGUISE_RARITY_EPIC_NAME=Epic
-TID_EGG_REWARD_DISGUISE_UNLOCKED=%U0 disguise unlocked!
-TID_EGG_REWARD_DISGUISE_UPGRADED=%U0 disguise upgraded!
+TID_EGG_REWARD_DISGUISE_UNLOCKED=Unlocked %U0 skin for %U1!
+TID_EGG_REWARD_DISGUISE_UPGRADED=%U0 skin for %U1 upgraded!
 TID_SURVIVAL_BONUS=Survival Bonus Upgraded
 TID_FEEDBACK_CRITICAL=Critical!
 TID_DISGUISE_BABY_0_NAME=Disguise 1
@@ -311,3 +311,4 @@ TID_PAUSE_TAB_MAP_TITLE=Map
 TID_PAUSE_TAB_OPTIONS_TITLE=Options
 TID_PAUSE_TAB_OPTIONS_END_GAME=End Game
 TID_DRAGON_GET_NOW=Get Now!
+TID_EGG_PREVIEW_REWARD=Preview It!
