--- a/Assets/Resources/Localization/japanese.txt
+++ b/Assets/Resources/Localization/japanese.txt
@@ -82,7 +82,7 @@ TID_INCUBATOR_FULL_NEST_MESSAGE=
 TID_INCUBATOR_EMPTY_NEST_MESSAGE=
 TID_EGG_INSTANT_OPEN=
 TID_EGG_BUY_MORE=
-TID_EGG_CALL_TO_ACTION=
+TID_EGG_EQUIP_REWARD=
 TID_EGG_TAP_TO_OPEN=
 TID_EGG_REWARD_DISGUISE_MAXED=
 TID_SC_NAME=
@@ -311,3 +311,4 @@ TID_PAUSE_TAB_MAP_TITLE=
 TID_PAUSE_TAB_OPTIONS_TITLE=
 TID_PAUSE_TAB_OPTIONS_END_GAME=
 TID_DRAGON_GET_NOW=
+TID_EGG_PREVIEW_REWARD=
