Egg Info Popup: Development - Full implementation and integration into the menu. Popup Launcher: Development - New component to easily connect buttons to open/close popups. Localization: Content - Latest texts export, added TIDs for the Egg Info Popup.
Former-commit-id: 19010492b216fa88ed85f39ef3cfca3bb1be0f6e

--- a/Assets/Resources/Localization/brazilian.txt
+++ b/Assets/Resources/Localization/brazilian.txt
@@ -410,3 +410,7 @@ TID_SOCIAL_LOGIN_MAINMENU_INCENTIVIZED=
 TID_SOCIAL_PERM_MAINMENU=
 TID_SOCIAL_PERM_MAINMENU_INCENTIVIZED=
 TID_SOCIAL_WARNING_LOGOUT_DESC=
+TID_EGG_INFO_TITLE=
+TID_EGG_INFO_STANDARD=
+TID_EGG_INFO_PREMIUM=
+TID_GEN_UNDERSTOOD=
