--- a/Assets/Resources/Localization/english.txt
+++ b/Assets/Resources/Localization/english.txt
@@ -410,3 +410,7 @@ TID_SOCIAL_LOGIN_MAINMENU_INCENTIVIZED=[b]+%U0[GEM]
 TID_SOCIAL_PERM_MAINMENU=[ffe400]Add Friends[-]
 TID_SOCIAL_PERM_MAINMENU_INCENTIVIZED=[ffe400]Add Friends[-]\n%U0 [GEM]
 TID_SOCIAL_WARNING_LOGOUT_DESC=If you logout of %U0 you won’t be able to compete with your Friends on the Leaderboards. Are you sure you want to do this?
+TID_EGG_INFO_TITLE=Eggs
+TID_EGG_INFO_STANDARD=Purple eggs can be found in-game, up to one per game.\nAfter some <color=%U0>incubation time</color>, they will reward you <color=%U1>skins</color> and <color=%U1>pets</color> for your dragons!
+TID_EGG_INFO_PREMIUM=Golden eggs can only be purchased, but they are <color=%U0>instantly opened</color>!
+TID_GEN_UNDERSTOOD=Understood!
