--- a/Assets/Resources/Localization/russian.txt
+++ b/Assets/Resources/Localization/russian.txt
@@ -410,3 +410,7 @@ TID_SOCIAL_LOGIN_MAINMENU_INCENTIVIZED=
 TID_SOCIAL_PERM_MAINMENU=
 TID_SOCIAL_PERM_MAINMENU_INCENTIVIZED=
 TID_SOCIAL_WARNING_LOGOUT_DESC=
+TID_EGG_INFO_TITLE=
+TID_EGG_INFO_STANDARD=
+TID_EGG_INFO_PREMIUM=
+TID_GEN_UNDERSTOOD=
