--- a/Assets/Resources/Localization/spanish.txt
+++ b/Assets/Resources/Localization/spanish.txt
@@ -322,95 +322,102 @@ TID_POWERUP_PREYHPBOOST_NAME=
 TID_POWERUP_PREYHPBOOST_DESC=
 TID_POWERUP_PREYHPBOOST_DESC_SHORT=
 TID_GEN_SAVE=GUARDAR
-TID_GEN_CONTINUE=
-TID_GEN_ENABLE=
-TID_GEN_LOGIN=
-TID_GEN_OPTIONS=
-TID_GEN_RETRY=
-TID_GEN_UPLOAD=
-TID_GEN_LOADING=
-TID_SAVE_CLOUD_BUTT_SYNCSAVE=
-TID_SAVE_CLOUD_CLOUDSAVE=
+TID_GEN_CONTINUE=CONTINUAR
+TID_GEN_ENABLE=ACTIVAR
+TID_GEN_LOGIN=INICIAR SESIÓN
+TID_GEN_OPTIONS=OPCIONES
+TID_GEN_RETRY=REINTENTAR
+TID_GEN_UPLOAD=Subir
+TID_GEN_LOADING=Cargando
+TID_SAVE_CLOUD_BUTT_SYNCSAVE=SINCRONIZAR DATOS GUARDADOS
+TID_SAVE_CLOUD_CLOUDSAVE=El GUARDADO EN LA NUBE guarda tu progreso online
 TID_SAVE_CLOUD_DESC=
-TID_SAVE_CLOUD_LOADING_NAME=
-TID_SAVE_CLOUD_LOADING_WAIT=
-TID_SAVE_CLOUD_LOGGED_DESC=
-TID_SAVE_CLOUD_SYNCSAVE_DESC=
+TID_SAVE_CLOUD_LOADING_NAME=SOLICITUD EN CURSO...
+TID_SAVE_CLOUD_LOADING_WAIT=Cargando, espera...
+TID_SAVE_CLOUD_LOGGED_DESC=Desactivar %U0 también desactiva la nube.
+TID_SAVE_CLOUD_SYNCSAVE_DESC=Sincronizar los datos guardados unifica tu progreso en todos tus dispositivos.
 TID_SAVE_CLOUD_ACTIVE_DESC=
 TID_SAVE_CLOUD_ACTIVE_NAME=
-TID_SAVE_CLOUD_ENABLED_ANDROID_DESC=
-TID_SAVE_CLOUD_ENABLED_IOS_DESC=
-TID_SAVE_CLOUD_ENABLED_NAME=
-TID_SAVE_ERROR_BOTH_SAVE_CORRUPTED_DESC=
-TID_SAVE_ERROR_BOTH_SAVE_CORRUPTED_NAME=
-TID_SAVE_ERROR_CLOUD_CORRUPTED_DESC=
-TID_SAVE_ERROR_CLOUD_CORRUPTED_NAME=
-TID_SAVE_ERROR_CLOUD_DISABLED_NAME=
-TID_SAVE_ERROR_CLOUD_FAILED_NAME=
-TID_SAVE_ERROR_CLOUD_LOGIN_FAILED_DESC=
-TID_SAVE_ERROR_CLOUD_LOGIN_FAILED_NAME=
-TID_SAVE_ERROR_CLOUD_OFFLINE_DESC=
-TID_SAVE_ERROR_CLOUD_OFFLINE_NAME=
-TID_SAVE_ERROR_DISABLED_ACCESS_DESC=
-TID_SAVE_ERROR_DISABLED_NAME=
-TID_SAVE_ERROR_DISABLED_SPACE_DESC=
-TID_SAVE_ERROR_FAILED_DESC=
-TID_SAVE_ERROR_FAILED_NAME=
-TID_SAVE_ERROR_LOAD_FAILED_DESC=
-TID_SAVE_ERROR_LOAD_FAILED_NAME=
-TID_SAVE_ERROR_LOCAL_CORRUPTED_DESC=
-TID_SAVE_ERROR_LOCAL_CORRUPTED_NAME=
-TID_SAVE_ERROR_LOCAL_CORRUPTED_OFFLINE_DESC=
-TID_SAVE_ERROR_LOCAL_CORRUPTED_UPDATE_DESC1=
-TID_SAVE_ERROR_LOCAL_CORRUPTED_UPDATE_DESC2=
-TID_SAVE_ERROR_UPDATE_DESC1=
-TID_SAVE_ERROR_UPDATE_DESC2=
-TID_SAVE_POPUP_CLOUD_SAVE_ACTIVE_DESC=
-TID_SAVE_POPUP_CLOUD_SAVE_SYNC_NOW=
-TID_SAVE_POPUP_ERROR_CLOUD_INACCESSIBLE_DESC=
-TID_SAVE_POPUP_ERROR_CLOUD_INACCESSIBLE_NAME=
-TID_SAVE_POPUP_ERROR_CLOUD_LOGIN_FAILED_DESC=
-TID_SAVE_POPUP_ERROR_CLOUD_SAVE_DISABLED_DESC=
-TID_SAVE_POPUP_ERROR_CLOUD_WRONG_USER_DESC=
-TID_SAVE_POPUP_ERROR_CLOUD_WRONG_USER_NAME=
-TID_SAVE_POPUP_ERROR_LOCAL_CORRUPTED_CLOUD_SAVE_DESC=
-TID_SAVE_POPUP_ERROR_SYNC_FAILED_DESC=
-TID_SAVE_POPUP_ERROR_SYNC_FAILED_NAME=
-TID_SAVE_POPUP_PROMPT_CLOUD_ENABLE_DESC=
-TID_SAVE_POPUP_WARN_CLOUD_LOGOUT_DESC=
-TID_SAVE_POPUP_WARN_CLOUD_SWITCH_DESC=
-TID_SAVE_POPUP_WARN_CLOUD_SWITCH_NETWORK_DESC=
-TID_SAVE_POPUP_WARN_CLOUD_WRONG_CHOICE_DESC=
-TID_SAVE_POPUP_WARN_CLOUD_WRONG_CHOICE_NAME=
-TID_SAVE_PROMPT_CLOUD_ENABLE_NAME=
-TID_SAVE_PROMPT_UPDATE_ANDROID_DESC=
-TID_SAVE_PROMPT_UPDATE_IOS_DESC=
-TID_SAVE_PROMPT_UPDATE_NAME=
-TID_SAVE_WARN_CLOUD_DISABLE_DESC=
-TID_SAVE_WARN_CLOUD_DISABLE_NAME=
-TID_SAVE_WARN_CLOUD_LOGOUT_NAME=
-TID_SAVE_WARN_CLOUD_SWITCH_NAME=
-TID_SOCIAL_USERPROFILE_LOG_NETWORK=
-TID_SOCIAL_USERPROFILE_LOG_RECEIVE=
-TID_SOCIAL_ERROR_CONNECTION_DESC=
-TID_SOCIAL_ERROR_CONNECTION_NAME=
-TID_SOCIAL_ERROR_SHAREPERMISSION_DESC=
-TID_SOCIAL_ERROR_SHAREPERMISSION_NAME=
-TID_SOCIAL_ERROR_WRONG_ACCOUNT_DESC=
-TID_SOCIAL_ERROR_WRONG_ACCOUNT_NAME=
-TID_SOCIAL_FACEBOOK=
-TID_SOCIAL_LOGIN_COMPLETE_DESC=
-TID_SOCIAL_LOGIN_COMPLETE_NAME=
-TID_SOCIAL_LOGIN_FAILED_DESC=
-TID_SOCIAL_LOGIN_FAILED_NAME=
-TID_SOCIAL_LOGIN_INCOMPLETE_DESC=
-TID_SOCIAL_LOGIN_INCOMPLETE_DESC2=
-TID_SOCIAL_LOGIN_INCOMPLETE_NAME=
-TID_SOCIAL_LOGIN_MAINMENU_INCENTIVIZED=
-TID_SOCIAL_PERM_MAINMENU=
-TID_SOCIAL_PERM_MAINMENU_INCENTIVIZED=
-TID_SOCIAL_WARNING_LOGOUT_DESC=
+TID_SAVE_CLOUD_ENABLED_ANDROID_DESC=El guardado en la nube está activado. Puedes cargar tu partida de la nube en cualquier dispositivo Android iniciando sesión en tu cuenta de %U0.
+TID_SAVE_CLOUD_ENABLED_IOS_DESC=Se ha activado el guardado en la nube. Accede a tu partida de la nube en cualquier dispositivo iOS iniciando sesión en tu cuenta de %U0.
+TID_SAVE_CLOUD_ENABLED_NAME=Guardado en la nube activado
+TID_SAVE_ERROR_BOTH_SAVE_CORRUPTED_DESC=Lo sentimos, no hemos podido cargar ni tu partida de la nube ni tu partida local.\n\nSe creará una nueva partida local, con lo que el juego empezará de nuevo. Lamentamos las molestias.\n\nSi has jugado al juego recientemente en otro dispositivo, tal vez puedas recuperar parte del progreso jugando en ese dispositivo.
+TID_SAVE_ERROR_BOTH_SAVE_CORRUPTED_NAME=ERROR: Partida dañada
+TID_SAVE_ERROR_CLOUD_CORRUPTED_DESC=Tu partida de la nube estaba dañada, pero hemos podido cargar tu partida local.\n\nSi tienes datos más recientes en otro dispositivo, tal vez puedas recuperar el progreso perdido jugando en ese dispositivo.
+TID_SAVE_ERROR_CLOUD_CORRUPTED_NAME=AVISO: Partida de la nube dañada
+TID_SAVE_ERROR_CLOUD_DISABLED_NAME=Guardado en la nube desactivado
+TID_SAVE_ERROR_CLOUD_FAILED_NAME=Error al guardar en la nube
+TID_SAVE_ERROR_CLOUD_LOGIN_FAILED_DESC=No hemos podido iniciar sesión en el servidor de la nube.\n\nIntenta conectarte a %U1 otra vez para reactivar el guardado en la nube o continúa guardando solo la partida local de este dispositivo.\n\n(%U0).
+TID_SAVE_ERROR_CLOUD_LOGIN_FAILED_NAME=ERROR: Fallo de inicio de sesión
+TID_SAVE_ERROR_CLOUD_OFFLINE_DESC=Imposible conectar con el servidor de la nube. Comprueba tu conexión a Internet o inténtalo otra vez más tarde.\n\nEl juego se guardará con normalidad y sincronizará tu progreso con la nube en cuanto contacte con nuestro servidor.\n\n(%U0).
+TID_SAVE_ERROR_CLOUD_OFFLINE_NAME=AVISO: Sin conexión a la nube
+TID_SAVE_ERROR_DISABLED_ACCESS_DESC=No se puede acceder al almacenamiento del dispositivo y no se ha guardado el progreso.\n\nComprueba si la tarjeta SD o el almacenamiento interno funcionan. Si has conectado tu dispositivo a un ordenador, desconéctalo y vuelve a intentarlo.
+TID_SAVE_ERROR_DISABLED_NAME=ERROR: Guardado desactivado
+TID_SAVE_ERROR_DISABLED_SPACE_DESC=Tu dispositivo no tiene suficiente espacio libre para guardar tu progreso.\n\nConsigue espacio libre o no podrás seguir jugando hasta que puedas guardar.
+TID_SAVE_ERROR_FAILED_DESC=Ha habido un error al guardar la partida. Comprueba que tengas espacio libre en tu dispositivo.\n\nNo se guardará el progreso hasta que se solucione el problema.\n\n(%U0).
+TID_SAVE_ERROR_FAILED_NAME=ERROR AL GUARDAR
+TID_SAVE_ERROR_LOAD_FAILED_DESC=Se ha producido un error al cargar tus datos guardados locales.\n\nComprueba que tu tarjeta SD/almacenamiento interno está accesible. Si tu dispositivo está conectado a un ordenador, desconéctalo e inténtalo de nuevo.\n\nEl juego no puede continuar hasta que se resuelva el problema.\n\n(%U0).
+TID_SAVE_ERROR_LOAD_FAILED_NAME=ERROR: No se puede acceder a los datos guardados
+TID_SAVE_ERROR_LOCAL_CORRUPTED_DESC=Lo sentimos, no hemos podido cargar tu partida.\n\nSe creará una nueva partida local, con lo que el juego empezará de nuevo. Lamentamos las molestias.
+TID_SAVE_ERROR_LOCAL_CORRUPTED_NAME=ERROR: Partida local dañada
+TID_SAVE_ERROR_LOCAL_CORRUPTED_OFFLINE_DESC=No hemos podido conectarnos al servidor de la nube y tu partida local está dañada.\n\nSi continúas se creará una partida local nueva, con lo que el juego empezará de nuevo.\n\nPara recuperar tu partida de la nube, comprueba tu conexión a Internet o inténtalo otra vez más tarde.
+TID_SAVE_ERROR_LOCAL_CORRUPTED_UPDATE_DESC1=Tu partida local está dañada y tu partida de la nube es de una versión más reciente del juego, por lo que no puede cargarse.\n\nTienes que actualizar la aplicación y cargar la partida de la nube para jugar en este dispositivo.\n\n(%U0).
+TID_SAVE_ERROR_LOCAL_CORRUPTED_UPDATE_DESC2=Tu partida local está dañada y tu partida de la nube es de una versión más reciente del juego, por lo que no puede cargarse.\n\nLa actualización pronto estará disponible para este dispositivo. Una vez actualices, podrás continuar tu partida de la nube. \n\nSi continúas ahora, se creará una nueva partida local, con lo que el juego empezará de nuevo en este dispositivo.\n\n(%U0).
+TID_SAVE_ERROR_UPDATE_DESC=No se puede cargar tu partida en la nube porque es de una versión más reciente del juego. Actualiza la aplicación antes de seguir.\n\nPuedes jugar sin conexión con tu partida local, pero perderás el progreso cuando actualices el juego y te conectes a la partida en la nube.\n\n(%U0).
+TID_SAVE_ERROR_UPDATE_DESC1=No se puede cargar tu partida en la nube porque es de una versión más reciente del juego que pronto estará disponible en este dispositivo.\n\nMientras tanto, puedes jugar sin conexión con tu partida local, pero perderás el progreso cuando actualices el juego y te conectes a la partida en la nube.\n\n(%U0).
+TID_SAVE_CLOUD_SAVE_ACTIVE_DESC=El guardado en la nube está activado
+TID_SAVE_CLOUD_SAVE_SYNC_NOW=SINCRONIZAR YA
+TID_SAVE_ERROR_CLOUD_INACCESSIBLE_DESC=Se ha producido un error al descargar tu partida de la nube. Para solucionarlo, intenta sincronizarla de nuevo, sube tu partida local a la nube o juega sin conexión con tu partida local.
+TID_SAVE_ERROR_CLOUD_INACCESSIBLE_NAME=Partida de la nube inaccesible
+TID_SAVE_ERROR_CLOUD_SAVE_DISABLED_DESC=Puedes seguir jugando en este dispositivo, pero tu progreso no se guardará en la nube.\n\nPara reactivar el guardado en la nube, asegúrate de que usas la cuenta correcta y reactiva %U0 en el menú Opciones.
+TID_SAVE_ERROR_CLOUD_WRONG_USER_DESC=Se ha desactivado el guardado en la nube porque la cuenta de Facebook en que has iniciado sesión no es la correcta. Si inicias sesión en la cuenta correcta, puedes intentar volver a conectarte a la nube.\n\n(%U0).
+TID_SAVE_ERROR_CLOUD_WRONG_USER_NAME=Error de guardado en la nube
+TID_SAVE_ERROR_LOCAL_CORRUPTED_CLOUD_SAVE_DESC=Tu partida local estaba dañada, pero hemos podido cargar tu partida de la nube.\n\nSi el error persiste, contacta con atención al cliente.
+TID_SAVE_ERROR_SYNC_FAILED_DESC=Ha ocurrido un error al sincronizar con tu partida de la nube. Si el problema persiste, contacta con atención al cliente.\n\n(%U0).
+TID_SAVE_ERROR_SYNC_FAILED_NAME=Error al sincronizar con la nube
+TID_SAVE_PROMPT_CLOUD_ENABLE_DESC=¿Quieres activar el guardado en la nube? Se guardará una copia de tu partida en Internet y podrás sincronizar tu progreso en varios dispositivos iniciando sesión en %U0.
+TID_SAVE_WARN_CLOUD_LOGOUT_DESC=Si cierras sesión en %U0 desactivarás el guardado en la nube.\n\nPuedes seguir jugando en este dispositivo, pero tu progreso no se guardará en la nube. Puedes reactivar el guardado en la nube iniciando sesión en tu cuenta de %U0 en el menú Opciones.\n\n¿Seguro que quieres desactivar el guardado en la nube?
+TID_SAVE_WARN_CLOUD_SWITCH_DESC=Estás intentando iniciar sesión con otra cuenta de %U0. Se cargará la partida de la nube de esa cuenta o, si no la hay, se iniciará una partida nueva.\n\nSi has guardado en la nube, puedes volver a tu partida actual iniciando sesión en la cuenta de %U0 anterior pero perderás tu progreso actual.\n\n¿Seguro que quieres iniciar sesión en la otra cuenta?
+TID_SAVE_WARN_CLOUD_SWITCH_NETWORK_DESC=Estás iniciando sesión en otro tipo de cuenta. Se cargará la partida de la nube de dicha cuenta o, si no hay partida en la nube, empezará una nueva partida.\n\nPuedes volver a tu partida actual iniciando sesión %U0 en el menú Opciones.\n\n¿Seguro que quieres iniciar sesión en %U1?
+TID_SAVE_WARN_CLOUD_WRONG_CHOICE_DESC=La partida que has elegido tiene menos progreso. ¿Seguro que quieres usarla?
+TID_SAVE_WARN_CLOUD_WRONG_CHOICE_NAME=¡Aviso!
+TID_SAVE_PROMPT_CLOUD_ENABLE_NAME=Activar guardado en nube
+TID_SAVE_PROMPT_UPDATE_ANDROID_DESC=¡Hay una actualización para Hungry Dragon! Para poder aprovechar el guardado en la nube, las competiciones diarias y las rebajas, descarga la última versión en Google Play Store.
+TID_SAVE_PROMPT_UPDATE_IOS_DESC=¡Hay una actualización para Hungry Dragon! Para poder aprovechar el guardado en la nube, las competiciones diarias y las rebajas, descarga la última versión en App Store.
+TID_SAVE_PROMPT_UPDATE_NAME=Actualización disponible
+TID_SAVE_WARN_CLOUD_DISABLE_DESC=Si desactivas el guardado en la nube, seguirás pudiendo jugar en este dispositivo pero el progreso no se guardará en la nube. Puedes reactivar el guardado en la nube en el menú Opciones.\n\n¿Seguro que quieres desactivar el guardado en la nube?
+TID_SAVE_WARN_CLOUD_DISABLE_NAME=Desactivar guardado en nube
+TID_SAVE_WARN_CLOUD_LOGOUT_NAME=Cerrar sesión de guardado en la nube
+TID_SAVE_WARN_CLOUD_SWITCH_NAME=Cambiar guardado en la nube
+TID_SOCIAL_USERPROFILE_LOG_NETWORK=Inicia sesión en %U0
+TID_SOCIAL_USERPROFILE_LOG_RECEIVE=Inicia sesión en %U0 y recibe:
+TID_SOCIAL_ERROR_CONNECTION_DESC=Hungry Dragon no puede conectarse a %U0.\n\nComprueba tu conexión a Internet e inténtalo otra vez.
+TID_SOCIAL_ERROR_CONNECTION_NAME=Conexión interrumpida
+TID_SOCIAL_ERROR_SHAREPERMISSION_DESC=Hungry Dragon no tiene permiso para publicar en tu muro de Facebook. Antes tienes que autorizar a la aplicación.
+TID_SOCIAL_ERROR_SHAREPERMISSION_NAME=Error al compartir
+TID_SOCIAL_ERROR_WRONG_ACCOUNT_DESC=Las funciones online del juego se han desactivado porque estás iniciando sesión con una cuenta de %U0 diferente.\n\nEntra en la aplicación de %U0 o en tu navegador predeterminado e inicia sesión en la cuenta correcta para seguir compitiendo con tus amigos en los marcadores.
+TID_SOCIAL_ERROR_WRONG_ACCOUNT_NAME=Cuenta equivocada
+TID_SOCIAL_FACEBOOK=Facebook
+TID_SOCIAL_LOGIN_COMPLETE_DESC=Ahora verás a tus amigos que juegan a Hungry Shark World, sus tiburones y sus récords y además puedes enterarte de qué hacen en el juego.\n\n¡Como agradecimiento, toma %U0 [GEM]!
+TID_SOCIAL_LOGIN_COMPLETE_NAME=Sesión iniciada
+TID_SOCIAL_LOGIN_FAILED_DESC=Si quieres intentarlo más tarde, toca %U0 otra vez.
+TID_SOCIAL_LOGIN_FAILED_NAME=Error de inicio de sesión
+TID_SOCIAL_LOGIN_INCOMPLETE_DESC=Para recibir %U1 [GEM] %U0 por iniciar sesión, tienes que permitir que Hungry Dragon vea tu [08FF00FF]lista de amigos[-].\n\nSi lo haces podrás ver los dragones de tus amigos, y competir en los marcadores.\n\n¿Quieres hacerlo ahora?
+TID_SOCIAL_LOGIN_INCOMPLETE_DESC2=Para mostrarte los dragones de tus amigos y poder competir con ellos en el marcador, Hungry Dragon necesita poder ver tu [08FF00FF]lista de amigos[-].\n\n¿Quieres hacerlo ahora?
+TID_SOCIAL_LOGIN_INCOMPLETE_NAME=Inicio de sesión incompleto
+TID_SOCIAL_LOGIN_MAINMENU_INCENTIVIZED=[b]+%U0[GEM]
+TID_SOCIAL_PERM_MAINMENU=[ffe400]Añadir amigos[-]
+TID_SOCIAL_PERM_MAINMENU_INCENTIVIZED=[ffe400]Añadir amigos[-]\n%U0 [GEM]
+TID_SOCIAL_WARNING_LOGOUT_DESC=Si cierras sesión en %U0 no podrás competir con tus amigos en los marcadores. ¿Seguro que quieres hacerlo?
 TID_EGG_INFO_TITLE=
 TID_EGG_INFO_STANDARD=
 TID_EGG_INFO_PREMIUM=
 TID_GEN_UNDERSTOOD=
+TID_GEN_UPDATE=
+TID_SAVE_ERROR_UPDATE_TITLE=
+TID_SAVE_ERROR_UPDATE_TITLE1=
+TID_SAVE_ERROR_UPDATE_TITLE2=
+TID_SAVE_ERROR_SAVE_FAILED_ANDROID=
+TID_SOCIAL_WARNING_LOGOUT_TITLE=
+TID_SOCIAL_NETWORK_WEIBO_NAME=
+TID_SOCIAL_NETWORK_GAMECENTER_NAME=
