--- a/Assets/Resources/Localization/japanese.txt
+++ b/Assets/Resources/Localization/japanese.txt
@@ -363,25 +363,24 @@ TID_SAVE_ERROR_LOCAL_CORRUPTED_NAME=
 TID_SAVE_ERROR_LOCAL_CORRUPTED_OFFLINE_DESC=
 TID_SAVE_ERROR_LOCAL_CORRUPTED_UPDATE_DESC1=
 TID_SAVE_ERROR_LOCAL_CORRUPTED_UPDATE_DESC2=
+TID_SAVE_ERROR_UPDATE_DESC=
 TID_SAVE_ERROR_UPDATE_DESC1=
-TID_SAVE_ERROR_UPDATE_DESC2=
-TID_SAVE_POPUP_CLOUD_SAVE_ACTIVE_DESC=
-TID_SAVE_POPUP_CLOUD_SAVE_SYNC_NOW=
-TID_SAVE_POPUP_ERROR_CLOUD_INACCESSIBLE_DESC=
-TID_SAVE_POPUP_ERROR_CLOUD_INACCESSIBLE_NAME=
-TID_SAVE_POPUP_ERROR_CLOUD_LOGIN_FAILED_DESC=
-TID_SAVE_POPUP_ERROR_CLOUD_SAVE_DISABLED_DESC=
-TID_SAVE_POPUP_ERROR_CLOUD_WRONG_USER_DESC=
-TID_SAVE_POPUP_ERROR_CLOUD_WRONG_USER_NAME=
-TID_SAVE_POPUP_ERROR_LOCAL_CORRUPTED_CLOUD_SAVE_DESC=
-TID_SAVE_POPUP_ERROR_SYNC_FAILED_DESC=
-TID_SAVE_POPUP_ERROR_SYNC_FAILED_NAME=
-TID_SAVE_POPUP_PROMPT_CLOUD_ENABLE_DESC=
-TID_SAVE_POPUP_WARN_CLOUD_LOGOUT_DESC=
-TID_SAVE_POPUP_WARN_CLOUD_SWITCH_DESC=
-TID_SAVE_POPUP_WARN_CLOUD_SWITCH_NETWORK_DESC=
-TID_SAVE_POPUP_WARN_CLOUD_WRONG_CHOICE_DESC=
-TID_SAVE_POPUP_WARN_CLOUD_WRONG_CHOICE_NAME=
+TID_SAVE_CLOUD_SAVE_ACTIVE_DESC=
+TID_SAVE_CLOUD_SAVE_SYNC_NOW=
+TID_SAVE_ERROR_CLOUD_INACCESSIBLE_DESC=
+TID_SAVE_ERROR_CLOUD_INACCESSIBLE_NAME=
+TID_SAVE_ERROR_CLOUD_SAVE_DISABLED_DESC=
+TID_SAVE_ERROR_CLOUD_WRONG_USER_DESC=
+TID_SAVE_ERROR_CLOUD_WRONG_USER_NAME=
+TID_SAVE_ERROR_LOCAL_CORRUPTED_CLOUD_SAVE_DESC=
+TID_SAVE_ERROR_SYNC_FAILED_DESC=
+TID_SAVE_ERROR_SYNC_FAILED_NAME=
+TID_SAVE_PROMPT_CLOUD_ENABLE_DESC=
+TID_SAVE_WARN_CLOUD_LOGOUT_DESC=
+TID_SAVE_WARN_CLOUD_SWITCH_DESC=
+TID_SAVE_WARN_CLOUD_SWITCH_NETWORK_DESC=
+TID_SAVE_WARN_CLOUD_WRONG_CHOICE_DESC=
+TID_SAVE_WARN_CLOUD_WRONG_CHOICE_NAME=
 TID_SAVE_PROMPT_CLOUD_ENABLE_NAME=
 TID_SAVE_PROMPT_UPDATE_ANDROID_DESC=
 TID_SAVE_PROMPT_UPDATE_IOS_DESC=
@@ -414,3 +413,11 @@ TID_EGG_INFO_TITLE=
 TID_EGG_INFO_STANDARD=
 TID_EGG_INFO_PREMIUM=
 TID_GEN_UNDERSTOOD=
+TID_GEN_UPDATE=
+TID_SAVE_ERROR_UPDATE_TITLE=
+TID_SAVE_ERROR_UPDATE_TITLE1=
+TID_SAVE_ERROR_UPDATE_TITLE2=
+TID_SAVE_ERROR_SAVE_FAILED_ANDROID=
+TID_SOCIAL_WARNING_LOGOUT_TITLE=
+TID_SOCIAL_NETWORK_WEIBO_NAME=
+TID_SOCIAL_NETWORK_GAMECENTER_NAME=
