[ LOC ] Added localization for some new TIDs. Languages: Spanish and French.
Former-commit-id: eff486a87418f28c72e143586ea011774c5255a2

--- a/Assets/Resources/Localization/spanish.txt
+++ b/Assets/Resources/Localization/spanish.txt
@@ -1,8 +1,8 @@
-TID_PLAY=esto es un test
+TID_PLAY=JUGAR
 TID_SETTING=AJUSTES
 TID_FIRE_NAME=
-TID_SPEED_NAME=
-TID_ENERGY_NAME=
+TID_SPEED_NAME=Rapidez
+TID_ENERGY_NAME=Turbo
 TID_DRAGON_BABY_NAME=
 TID_DRAGON_BABY_DESC=
 TID_DRAGON_FAT_NAME=
@@ -51,7 +51,7 @@ TID_GEN_CANCEL=CANCELAR
 TID_GEN_BACK=ATRÁS
 TID_GEN_CLOSE=
 TID_GEN_OPEN=
-TID_LEVEL=
+TID_LEVEL=Nivel %U0
 TID_LEVEL_ABBR=
 TID_MIN=
 TID_MAX=
@@ -76,24 +76,24 @@ TID_LEVEL_2_DESC=
 TID_INCUBATOR_EMPTY_INVENTORY_MESSAGE=
 TID_INCUBATOR_OPEN_EGG=
 TID_INCUBATOR_READY_IN=
-TID_INCUBATOR_SKIP_FOR=
+TID_INCUBATOR_SKIP_FOR=Saltar
 TID_INCUBATOR_SLOT_EMPTY=
 TID_INCUBATOR_FULL_NEST_MESSAGE=
 TID_INCUBATOR_EMPTY_NEST_MESSAGE=
 TID_EGG_INSTANT_OPEN=
 TID_EGG_BUY_MORE=
-TID_EGG_EQUIP_REWARD=
+TID_EGG_EQUIP_REWARD=Equipar
 TID_EGG_TAP_TO_OPEN=
 TID_EGG_REWARD_DISGUISE_MAXED=
-TID_SC_NAME=
-TID_PC_NAME=
-TID_SC_NAME_PLURAL=
-TID_PC_NAME_PLURAL=
+TID_SC_NAME=moneda
+TID_PC_NAME=gema
+TID_SC_NAME_PLURAL=monedas
+TID_PC_NAME_PLURAL=gemas
 TID_DISGUISES_SCREEN_TITLE=
 TID_DISGUISE=
 TID_DISGUISE_PLURAL=
-TID_DISGUISES_BUY=
-TID_DISGUISES_USE=
+TID_DISGUISES_BUY=Comprar
+TID_DISGUISES_USE=Usar
 TID_DISGUISE_DEFAULT_NAME=
 TID_DISGUISE_DEFAULT_DESC=
 TID_DISGUISE_CROCODILE_0_NAME=
@@ -105,11 +105,11 @@ TID_DISGUISE_CROCODILE_5_NAME=
 TID_DISGUISE_CROCODILE_6_NAME=
 TID_DISGUISE_CROCODILE_7_NAME=
 TID_EGG_SHOP_TITLE=
-TID_EGG_SHOP_REWARDS_TITLE=
+TID_EGG_SHOP_REWARDS_TITLE=Recompensas
 TID_EGG_SHOP_REWARDS_DISGUISE=
 TID_EGG_SHOP_REWARDS_PET=
 TID_EGG_SHOP_REWARDS_SPECIAL_DRAGON=
-TID_EGG_SHOP_BUY=
+TID_EGG_SHOP_BUY=Comprar
 TID_GEN_COMING_SOON=Próximamente
 TID_EGG_DRAGON_BABY_NAME=
 TID_EGG_DRAGON_FAT_NAME=
@@ -121,16 +121,16 @@ TID_EGG_DRAGON_CLASSIC_NAME=
 TID_EGG_DRAGON_DEVIL_NAME=
 TID_EGG_DRAGON_BALROG_NAME=
 TID_EGG_DRAGON_TITAN_NAME=
-TID_MISSIONS_TITLE=
+TID_MISSIONS_TITLE=Misiones
 TID_MISSION_DIFFICULTY_EASY=
 TID_MISSION_DIFFICULTY_MEDIUM=
 TID_MISSION_DIFFICULTY_HARD=
 TID_MISSIONS_NEXT_MISSION_IN=
 TID_MISSIONS_REMOVE=
-TID_MISSIONS_SKIP=
-TID_MISSIONS_WHERE=
+TID_MISSIONS_SKIP=Saltar
+TID_MISSIONS_WHERE=Dónde:
 TID_MISSIONS_WITH=
-TID_MISSIONS_REWARD=
+TID_MISSIONS_REWARD=Recompensa
 TID_MISSIONS_UNLOCK_REQUIREMENT_SINGULAR=
 TID_MISSIONS_UNLOCK_REQUIREMENT_PLURAL=
 TID_MISSIONS_UNLOCK_NEED=
@@ -141,21 +141,21 @@ TID_MISSIONS_WITH_ANY_DRAGON=
 TID_MISSIONS_ACTIVATION_PENDING=
 TID_LEVEL_UNLOCK_REQUIREMENT_SINGULAR=
 TID_LEVEL_UNLOCK_REQUIREMENT_PLURAL=
-TID_DRAGON_TIER_0_NAME=
-TID_DRAGON_TIER_1_NAME=
-TID_DRAGON_TIER_2_NAME=
-TID_DRAGON_TIER_3_NAME=
-TID_DRAGON_TIER_4_NAME=
+TID_DRAGON_TIER_0_NAME=S
+TID_DRAGON_TIER_1_NAME=M
+TID_DRAGON_TIER_2_NAME=L
+TID_DRAGON_TIER_3_NAME=XL
+TID_DRAGON_TIER_4_NAME=XXL
 TID_FEEDBACK_NEED_BIGGER_DRAGON=
 TID_FEEDBACK_NEED_TIER_DRAGON=
 TID_EGG_SHOP_DRAGON_REQUIRED=
 TID_DISGUISES_POWER_UNLOCK_INFO=
-TID_FEEDBACK_ESCAPED=
-TID_FEEDBACK_FLOCK_BONUS=
-TID_FEEDBACK_SO_CLOSE=
-TID_FEEDBACK_GOT_AWAY=
+TID_FEEDBACK_ESCAPED=¡Escapa!
+TID_FEEDBACK_FLOCK_BONUS=Bandada de pájaros
+TID_FEEDBACK_SO_CLOSE=¡Por poco!
+TID_FEEDBACK_GOT_AWAY=¡Libre!
 TID_FEEDBACK_CURSED=
-TID_FEEDBACK_STARVING=
+TID_FEEDBACK_STARVING=¡Hambriento!
 TID_EGG_REWARD_DISGUISE_COMMON_NAME=
 TID_EGG_REWARD_DISGUISE_RARE_NAME=
 TID_EGG_REWARD_DISGUISE_EPIC_NAME=
@@ -167,7 +167,7 @@ TID_DISGUISE_RARITY_RARE_NAME=
 TID_DISGUISE_RARITY_EPIC_NAME=
 TID_EGG_REWARD_DISGUISE_UNLOCKED=
 TID_EGG_REWARD_DISGUISE_UPGRADED=
-TID_SURVIVAL_BONUS=
+TID_SURVIVAL_BONUS=¡Supervivencia extra mejorada
 TID_FEEDBACK_CRITICAL=
 TID_DISGUISE_BABY_0_NAME=
 TID_DISGUISE_BABY_1_NAME=
@@ -241,18 +241,18 @@ TID_DISGUISE_TITAN_4_NAME=
 TID_DISGUISE_TITAN_5_NAME=
 TID_DISGUISE_TITAN_6_NAME=
 TID_DISGUISE_TITAN_7_NAME=
-TID_RESULTS_TITLE=
-TID_RESULTS_HIGH_SCORE=
-TID_RESULTS_SCORE=
-TID_RESULTS_HIGH_SCORE_VALUE=
-TID_RESULTS_SURVIVAL_BONUS=
-TID_RESULTS_TOTAL_EARNED=
+TID_RESULTS_TITLE=RESULTADOS
+TID_RESULTS_HIGH_SCORE=¡NUEVO RÉCORD!
+TID_RESULTS_SCORE=Puntúa
+TID_RESULTS_HIGH_SCORE_VALUE=Récord: %U0
+TID_RESULTS_SURVIVAL_BONUS=SUPERVIVENCIA EXTRA
+TID_RESULTS_TOTAL_EARNED=TOTAL OBTENIDO
 TID_FEEDBACK_FIRE_RUSH_LINE_1=
-TID_FEEDBACK_FIRE_RUSH_LINE_2=
-TID_FEEDBACK_MISSION_COMPLETED=
-TID_FEEDBACK_LEVEL_UP=
+TID_FEEDBACK_FIRE_RUSH_LINE_2=ASESINO
+TID_FEEDBACK_MISSION_COMPLETED=¡Misión Cumplida!
+TID_FEEDBACK_LEVEL_UP=¡Subes de nivel!
 TID_FEEDBACK_CHEST_FOUND=
-TID_GAME_REVIVE=
+TID_GAME_REVIVE=¡AYÚDAME!\n%U0
 TID_GAME_REVIVE_WITH_ADS=
 TID_SC_NOT_ENOUGH=
 TID_PC_NOT_ENOUGH=
@@ -270,7 +270,7 @@ TID_MISSION_OBJECTIVE_SCORE_NAME=
 TID_MISSION_OBJECTIVE_SCORE_DESC_SINGLE_RUN=
 TID_MISSION_OBJECTIVE_SCORE_DESC_MULTI_RUN=
 TID_GAME_REVIVE_AD_ENDS_IN=
-TID_CHEST_REWARD_TITLE=
+TID_CHEST_REWARD_TITLE=RECOMPENSAS DE COFRES DIARIOS
 TID_CHEST_REWARD_COINS=
 TID_CHEST_REWARD_PC=
 TID_CHEST_REWARD_EGG=
@@ -279,18 +279,18 @@ TID_CHEST_REWARD_BOOSTER=
 TID_CHEST_REWARD_BOOSTER_INFO=
 TID_CHEST_REWARD_INFO_MESSAGE=
 TID_GEN_OK2=¡VALE!
-TID_MISSIONS_TITLE_SINGULAR=
+TID_MISSIONS_TITLE_SINGULAR=Misión
 TID_MISSION_12_DESC=
 TID_MISSION_16_DESC=
-TID_GEN_FREE=
+TID_GEN_FREE=Gratis
 TID_GEN_EXCLAMATION_EXPRESSION=
-TID_RESULTS_TO_UNLOCK_NEXT_DRAGON=
-TID_RESULTS_DRAGON_UNLOCKED=
-TID_RESULTS_DRAGON_REQUIRED=
+TID_RESULTS_TO_UNLOCK_NEXT_DRAGON=Para desbloquear %U0:
+TID_RESULTS_DRAGON_UNLOCKED=¡%U0 desbloqueado!
+TID_RESULTS_DRAGON_REQUIRED=Juega con %U0 para desbloquear %U1
 TID_RESULTS_DRAGON_ALREADY_UNLOCKED=
-TID_PAUSE_TAB_MISSIONS_TITLE=
-TID_PAUSE_TAB_MAP_TITLE=
-TID_PAUSE_TAB_OPTIONS_TITLE=
+TID_PAUSE_TAB_MISSIONS_TITLE=Misiones
+TID_PAUSE_TAB_MAP_TITLE=Mapa
+TID_PAUSE_TAB_OPTIONS_TITLE=Opciones
 TID_PAUSE_TAB_OPTIONS_END_GAME=
 TID_DRAGON_GET_NOW=
 TID_EGG_PREVIEW_REWARD=
@@ -331,13 +331,13 @@ TID_GEN_UPLOAD=Subir
 TID_GEN_LOADING=Cargando
 TID_SAVE_CLOUD_BUTT_SYNCSAVE=SINCRONIZAR DATOS GUARDADOS
 TID_SAVE_CLOUD_CLOUDSAVE=El GUARDADO EN LA NUBE guarda tu progreso online
-TID_SAVE_CLOUD_DESC=
+TID_SAVE_CLOUD_DESC=Compite con tus amigos de %U0
 TID_SAVE_CLOUD_LOADING_NAME=SOLICITUD EN CURSO...
 TID_SAVE_CLOUD_LOADING_WAIT=Cargando, espera...
 TID_SAVE_CLOUD_LOGGED_DESC=Desactivar %U0 también desactiva la nube.
 TID_SAVE_CLOUD_SYNCSAVE_DESC=Sincronizar los datos guardados unifica tu progreso en todos tus dispositivos.
-TID_SAVE_CLOUD_ACTIVE_DESC=
-TID_SAVE_CLOUD_ACTIVE_NAME=
+TID_SAVE_CLOUD_ACTIVE_DESC=El guardado en la nube está activado. Tu progreso se guardó por última vez: %U0.
+TID_SAVE_CLOUD_ACTIVE_NAME=Guardado en la nube activado
 TID_SAVE_CLOUD_ENABLED_ANDROID_DESC=El guardado en la nube está activado. Puedes cargar tu partida de la nube en cualquier dispositivo Android iniciando sesión en tu cuenta de %U0.
 TID_SAVE_CLOUD_ENABLED_IOS_DESC=Se ha activado el guardado en la nube. Accede a tu partida de la nube en cualquier dispositivo iOS iniciando sesión en tu cuenta de %U0.
 TID_SAVE_CLOUD_ENABLED_NAME=Guardado en la nube activado
@@ -398,7 +398,7 @@ TID_SOCIAL_ERROR_SHAREPERMISSION_NAME=Error al compartir
 TID_SOCIAL_ERROR_WRONG_ACCOUNT_DESC=Las funciones online del juego se han desactivado porque estás iniciando sesión con una cuenta de %U0 diferente.\n\nEntra en la aplicación de %U0 o en tu navegador predeterminado e inicia sesión en la cuenta correcta para seguir compitiendo con tus amigos en los marcadores.
 TID_SOCIAL_ERROR_WRONG_ACCOUNT_NAME=Cuenta equivocada
 TID_SOCIAL_FACEBOOK=Facebook
-TID_SOCIAL_LOGIN_COMPLETE_DESC=Ahora verás a tus amigos que juegan a Hungry Shark World, sus tiburones y sus récords y además puedes enterarte de qué hacen en el juego.\n\n¡Como agradecimiento, toma %U0 [GEM]!
+TID_SOCIAL_LOGIN_COMPLETE_DESC=Ahora verás a tus amigos que juegan a Hungry Dragon, sus tiburones y sus récords y además puedes enterarte de qué hacen en el juego.\n\n¡Como agradecimiento, toma %U0 [GEM]!
 TID_SOCIAL_LOGIN_COMPLETE_NAME=Sesión iniciada
 TID_SOCIAL_LOGIN_FAILED_DESC=Si quieres intentarlo más tarde, toca %U0 otra vez.
 TID_SOCIAL_LOGIN_FAILED_NAME=Error de inicio de sesión
@@ -413,11 +413,9 @@ TID_EGG_INFO_TITLE=
 TID_EGG_INFO_STANDARD=
 TID_EGG_INFO_PREMIUM=
 TID_GEN_UNDERSTOOD=
-TID_GEN_UPDATE=
-TID_SAVE_ERROR_UPDATE_TITLE=
-TID_SAVE_ERROR_UPDATE_TITLE1=
-TID_SAVE_ERROR_UPDATE_TITLE2=
-TID_SAVE_ERROR_SAVE_FAILED_ANDROID=
-TID_SOCIAL_WARNING_LOGOUT_TITLE=
-TID_SOCIAL_NETWORK_WEIBO_NAME=
-TID_SOCIAL_NETWORK_GAMECENTER_NAME=
+TID_GEN_UPDATE=ACTUALIZAR
+TID_SAVE_ERROR_UPDATE_TITLE=Actualización requerida
+TID_SAVE_ERROR_SAVE_FAILED_ANDROID=Ha habido un error al guardar la partida. Comprueba que tengas espacio libre en tu dispositivo. Si está conectado por USB a un ordenador, desconéctalo.\n\nNo se guardará el progreso hasta que se solucione el problema.\n\n(%U0).
+TID_SOCIAL_WARNING_LOGOUT_TITLE=Cerrar sesión
+TID_SOCIAL_NETWORK_WEIBO_NAME=Weibo
+TID_SOCIAL_NETWORK_GAMECENTER_NAME=GameCenter
